[tool.poetry]
name = "fastapi-sqlmodel-alembic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.7.1"
asyncpg = "0.24.0"
fastapi = "0.68.1"
sqlmodel = "0.0.4"
uvicorn = "0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
